--- a/public/index2.html
+++ b/public/index2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Esports</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./css/w3.css">
@@ -17,16 +17,14 @@
 
     <!-- Header -->
     <header id="portfolio">
-        <a href="#"><img src="/w3images/avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
-        <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
         <div class="w3-container">
-            <h1><b>My Portfolio</b></h1>
+            <h1><b>Esports matches & results</b></h1>
             <div class="w3-section w3-bottombar w3-padding-16">
                 <span class="w3-margin-right">Filter:</span>
-                <button class="w3-button w3-black">ALL</button>
-                <button class="w3-button w3-white"><i class="fa fa-diamond w3-margin-right"></i>Design</button>
-                <button class="w3-button w3-white w3-hide-small"><i class="fa fa-photo w3-margin-right"></i>Photos</button>
-                <button class="w3-button w3-white w3-hide-small"><i class="fa fa-map-pin w3-margin-right"></i>Art</button>
+                <button class="w3-button w3-black">League of Legends</button>
+                <button class="w3-button w3-white"><i class="fa fa-diamond w3-margin-right"></i>Dota 2</button>
+                <button class="w3-button w3-white w3-hide-small"><i class="fa fa-photo w3-margin-right"></i>Counter-Strike: Global Offensive</button>
+                <button class="w3-button w3-white w3-hide-small"><i class="fa fa-map-pin w3-margin-right"></i>Overwatch</button>
             </div>
         </div>
     </header>
