--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Title</title>
-</head>
-<body>
-<div class ="container">
-    <h1>Games</h1>
-    <ul>
+<html>
+<title>Esports</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="./css/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+</style>
+<body class="w3-light-grey w3-content" style="max-width:1600px">
 
-    </ul>
+<!-- https://www.w3schools.com/w3css/w3css_templates.asp -->
+<!-- !PAGE CONTENT! -->
+<div id="main" style="margin-left:100px">
+
+    <!-- Header -->
+    <header id="portfolio">
+        <div class="w3-container">
+            <h1><b>Esports matches & results</b></h1>
+            <div id="buttonit" class="w3-section w3-bottombar w3-padding-16">
+                <span class="w3-margin-right">Category:</span>
+                <button id="league" class="btn active" onclick="showLeagueResults()">League of Legends</button>
+                <button id="dota" class="btn" onclick="showDotaResults()">Dota 2</button>
+                <button id="csgo" class="btn" onclick="showCsResults()">Counter-Strike: Global Offensive</button>
+                <button id="ow" class="btn" onclick="showOwResults()">Overwatch</button>
+            </div>
+        </div>
+    </header>
+
+    <div id="matchgrid">
+    </div>
+
 </div>
 
 <script src="./js/query.js"></script>
+<script src="./js/buttons.js"></script>
 </body>
 </html>
