--- a/public/match.html
+++ b/public/match.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="/../css/matchpage.css">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<p>This is match page</p>
 <div class="main">
     <div class="container">
-        <div class="result">
-            <p class="home">Koti</p>
-            <p class="away">Vieras</p>
+        <div class="teams">
+        <div class="hometeam">
+            <img class="homepic" src="/../img/questionmark.png" width="50" height="50">
+        <div class="homename">
+            <p class="home">TBA</p>
+        </div>
+        </div>
+            <div class="scorebox">
+                <div class="result">0 - 0</div>
+                <div class="bestof">0</div>
+                <div class="date">0</div>
+            </div>
+            <div class="awayteam">
+                <img class="awaypic" src="/../img/questionmark.png" width="50" height="50">
+                <div class="awayname">
+                    <p class="away">TBA</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
