--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
                 <button id="csgo" class="btn" onclick="showCsResults()">Counter-Strike: Global Offensive</button>
                 <button id="ow" class="btn" onclick="showOwResults()">Overwatch</button>
                 <button id="loginbutton" class="loginbtn" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+                <button id="querybutton" class="querybtn">Query</button>
             </div>
         </div>
     </header>
@@ -56,8 +57,8 @@
 
 </div>
 
-
-<script src="./js/query.js"></script>
+<script src="./js/queryhelper.js"></script>
+<script src="js/main.js"></script>
 <script src="./js/buttons.js"></script>
 <script src="./js/login.js"></script>
 </body>
